# voice-activity-detection

./: .gitattributes  .gitignore  README.md  build.gradle.kts  settings.gradle.kts
example/: build.gradle.kts
example/src/main/kotlin/application/: Application.kt
example/src/main/kotlin/capturing/: CapturingService.kt  LineCapturingService.kt
example/src/main/kotlin/device/: Device.kt  DeviceService.kt  MixerDeviceService.kt
example/src/main/kotlin/interaction/: InteractionScreen.kt  VadItem.kt  VoiceActivityDetectionItem.kt
example/src/main/kotlin/item/: VoiceActivityDetectionItem.kt
example/src/main/kotlin/picker/: ModePicker.kt  Picker.kt  PickerTab.kt  SampleRatePicker.kt
example/src/main/kotlin/playback/: ClipPlaybackService.kt  LinePlaybackService.kt  PlaybackService.kt
example/src/main/kotlin/selector/: ModeSelector.kt  Selector.kt  VadItemSelector.kt  VoiceActivityDetectionItemSelector.kt
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt
jni/include/: Java_com_github_numq_vad_NativeVoiceActivityDetection.h  Java_com_github_numq_vad_fvad_FVAD.h  com_github_numq_kvad_fvad_FVAD.h  com_github_numq_vad_fvad_FVAD.h
jni/src/: Java_com_github_numq_vad_NativeVoiceActivityDetection.cpp  Java_com_github_numq_vad_fvad_FVAD.cpp  com_github_numq_kvad_fvad_FVAD.cpp  com_github_numq_vad_fvad_FVAD.cpp
